objects/Headlines__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Link__c</fullName>
        <label>Reference Link</label>
        <type>Url</type>
    </fields>
    <label>Headlines</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Headlines</fullName>
        <columns>Content__c</columns>
        <columns>Reference_Link__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>Headlines</label>
    </listViews>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Headlines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>